--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <hello name="{{ name }}"></hello>
 <p>
-  Start editing to see some magic happen :)
+ https://www.freakyjolly.com/angular-ngselect-with-single-multiple-and-search-filter-tutorial/#.YFznx99R0oM
 </p>
 
     <ng-select [items]="items"
@@ -9,4 +9,18 @@
                appendTo="body"
                 [multiple]="true"
               [(ngModel)]="selected">
+    </ng-select>
+
+
+    <ng-select bindLabel="name"
+                placeholder="Select item"
+                appendTo="body"
+                [multiple]="true"
+                [searchable]="true" 
+                [clearable]="true"
+                [(ngModel)]="selected2">
+                <ng-option [value]="item.id" [disabled]="item.disabled" *ngFor="let item of items2">
+                    <img src="./assets/{{item.image}}" width="20px" height="20px"/>
+                    {{item.name}}
+                </ng-option>
     </ng-select>
