--- a/src/styles.css
+++ b/src/styles.css
@@ -1,2 +1,3 @@
 /* Add application styles & imports to this file! */
-@import "~@ng-select/ng-select/themes/default.theme.css";
+@import "~@ng-select/ng-select/themes/default.theme.css"; 
+/*@import "~@ng-select/ng-select/themes/material.theme.css";*/
